# iscp

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  tokens_management.py
.github/workflows/: tests.yml
examples/: client.py  multiple_clients.py  server.py  tasks.py
iscep/: __init__.py  auth_management.py  client.py  communication.py  logger.py  server.py  tokens_management.py
iscep/core/: __init__.py  client.py  command.py  logger.py  packet.py  packet_body.py  requests_handler.py  server.py  task.py
iscep/logging/: logger.py
iscep/logging/adapters/: __init__.py
iscep/server/: __init__.py  request_handler.py  server.py
iscep/type_classes/: __init__.py  command.py  command_response.py  packet_body.py  packet_command.py  packet_content.py
iscep/utils/: auth.py  communication.py  logger.py
tests/: conftest.py  consts.py  modules.py  utils.py
tests/functional/: test_auth_communication.py  test_commands.py  test_communication.py
tests/mocks/: mocks.py  tasks.py  tokens.json
tests/unit/: test_packet.py
